--- a/templates/default/event/eventlistbox.html
+++ b/templates/default/event/eventlistbox.html
@@ -17,14 +17,13 @@
     <THEAD>
         <TR{if $day == $today} class="superdark"{/if}>
             <TD class="bold nobr">
-                <i class="lms-ui-icon-content lms-ui-icon-timetable"></i>{$day|date_format:"%A"}
+                {icon name="timetable" fw=true label="{$day|date_format:"%A"} ({$day|date_format:"%x"})"}
             </TD>
             <TD colspan="3">
-                <span class="bold">({$day|date_format:"%x"})</span>
                 {if $getHolidays[$day]}
                 <span class="red">{trans("Holiday:")} {$getHolidays[$day]}</span>
                 {/if}
-                <a href="?m=eventsearch&datefrom={$day|date_format:"%Y/%m/%d"}&dateto={$day|date_format:"%Y/%m/%d"}">&raquo;&raquo;&raquo;</a>
+                {button type="link" href="?m=eventsearch&datefrom={$day|date_format:"%Y/%m/%d"}&dateto={$day|date_format:"%Y/%m/%d"}" icon="next"}
             </TD>
             <TD colspan="2" class="text-right nobr">
                 <div class="no-print">
