--- a/templates/default/event/eventlistheader.html
+++ b/templates/default/event/eventlistheader.html
@@ -1,18 +1,18 @@
 {block name=eventlistheader}
 <tr class="nobr bold">
     <td class="text-center" style="min-width: 70px;">
-        <i class="lms-ui-icon-content lms-ui-icon-event-type"></i>{trans("Type:")}
+        {icon name="type" label="Type:" fw=true}
     </td>
     <td>
-        <i class="lms-ui-icon-content lms-ui-icon-uptime"></i>{trans("Time:")}<br>
-        <i class="lms-ui-icon-content lms-ui-icon-user"></i>{trans("User:")}
+        {icon name="uptime" label="Time:" fw=true}<br>
+        {icon name="user" label="User:" fw=true}
     </td>
     <td>
-        <i class="lms-ui-icon-content lms-ui-icon-subject"></i>{trans("Title:")}<br>
-        <i class="lms-ui-icon-content lms-ui-icon-description"></i>{trans("Description:")}
+        {icon name="subject" label="Title:" fw=true}<br>
+        {icon name="description" label="Description:" fw=true}
     </td>
     <td>
-        <i class="lms-ui-icon-content lms-ui-icon-customer"></i>{trans("Customer:")}
+        {icon name="customer" label="Customer:" fw=true}
     </td>
     <td></td>
     <td class="text-right">
