--- a/templates/default/rt/rtprintindex.html
+++ b/templates/default/rt/rtprintindex.html
@@ -141,8 +141,8 @@
 					    {trans("Categories")}
 					</td>
 					<td>
-						<input type="hidden" name="catids" value="all">
-						<select size="1" name="catids[]" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("- all -")}">
+						<input type="hidden" name="categories" value="all">
+						<select size="1" name="categories[]" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("- all -")}">
 							<option value="-1" data-exclusive>{trans('- no categories -')}</option>
 							{foreach $categories as $c}
 								<option value="{$c.id}">{$c.name}</option>
@@ -243,8 +243,8 @@
 					<td>{icon name="helpdesk"}</td>
 					<td class="bold">{trans("Categories")}</td>
 					<td>
-						<input type="hidden" name="catids" value="all">
-						<select size="1" name="catids[]" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("- all -")}">
+						<input type="hidden" name="categories" value="all">
+						<select size="1" name="categories[]" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("- all -")}">
 							<option value="-1" data-exclusive>{trans('- no categories -')}</option>
 							{foreach $categories as $c}
 								<option value="{$c.id}">{$c.name}</option>
