--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -600,12 +600,11 @@
 			let selectedTaxId = $('#invoice-contents-field-tax-'+posuid).find('option:selected').val();
 			let tax = $('#contents-tax-' + posuid + '-' + selectedTaxId).val();
 
-			let grossPrice = parseFloat(grossPriceElemVal.replace(/[\,]+/, '.'));
-			grossPrice = Math.round((grossPrice + Number.EPSILON) * 100) / 100;
+			let grossPrice = financeDecimals.round(parseFloat(grossPriceElemVal.replace(/[\,]+/, '.')));
+			let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1));
 
-			let netPriceVal = Math.round(((grossPrice / (tax / 100 + 1)) + Number.EPSILON) * 100) / 100;
-			netPriceVal = netPriceVal.toFixed(2).toString().replace(/[\.]+/, ',');
-			netPriceElem.val(netPriceVal);
+			netPrice = netPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+			netPriceElem.val(netPrice);
 
 			grossPrice = grossPrice.toFixed(2).toString().replace(/[\.]+/, ',');
 			grossPriceElem.val(grossPrice);
@@ -622,12 +621,11 @@
 			let selectedTaxId = $('#invoice-contents-field-tax-'+posuid).find('option:selected').val();
 			let tax = $('#contents-tax-' + posuid + '-' + selectedTaxId).val();
 
-			let netPrice = parseFloat(netPriceElemVal.replace(/[\,]+/, '.'));
-			netPrice = Math.round((netPrice + Number.EPSILON) * 100) / 100;
+			let netPrice = financeDecimals.round(parseFloat(netPriceElemVal.replace(/[\,]+/, '.')));
+			let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1));
 
-			let grossPriceVal = Math.round(((netPrice * (tax / 100 + 1)) + Number.EPSILON) * 100) / 100;
-			grossPriceVal = grossPriceVal.toFixed(2).toString().replace(/[\.]+/, ',');
-			grossPriceElem.val(grossPriceVal);
+			grossPrice = grossPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+			grossPriceElem.val(grossPrice);
 
 			netPrice = netPrice.toFixed(2).toString().replace(/[\.]+/, ',');
 			netPriceElem.val(netPrice);
