--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -151,20 +151,43 @@
 											<option value="0">{trans("<!promotionschema>- none -")}</option>
 										{/if}
 										{foreach $promotions as $promotion}
-											<optgroup title="{$promotion.description|trunescape:512}"
-												label="{$promotion.name}{if !$promotion.valid && $promotion.datefrom > $smarty.now} ({trans("from")} {$promotion.datefrom|date_format:"%Y/%m/%d"}){/if}"
-												data-valid="{$promotion.valid}"
-												{if !$promotion.valid} class="blend" disabled
-												{if !$variables.alltariffs && $promotion.datefrom < $smarty.now} style="display: none;"{/if}{/if}
-											>
-												{foreach $promotion.schemas as $schemaid => $schema}
-													<option title="{$schema.description|trunescape:512}"
-														value="{$schemaid}"{if $variables.schemaid == $schemaid} selected{/if}
-														data-valid="{if $promotion.valid && $schema.valid}1{else}0{/if}"
-														{if !$promotion.valid || !$schema.valid} class="blend" disabled{/if}
-													>{$schema.name|truncate:40:"&hellip;":true}{if !$schema.valid && $schema.datefrom > $smarty.now} ({trans("from")} {$schema.datefrom|date_format:"%Y/%m/%d"}){/if}</option>
-												{/foreach}
-											</optgroup>
+											{if $promotion.valid || $promotion.datefrom > $smarty.now}
+												<optgroup title="{$promotion.description|trunescape:512}"
+													label="{strip}
+															{$promotion.name|escape}
+															{if !$promotion.valid && $promotion.datefrom > $smarty.now}
+																&nbsp;({trans("from")}&nbsp;{$promotion.datefrom|date_format:"%Y/%m/%d"})
+															{/if}
+														{/strip}"
+													data-valid="{$promotion.valid}"
+													{if !$promotion.valid}
+														class="blend" disabled
+														{if !$variables.alltariffs && $promotion.datefrom < $smarty.now}
+															style="display: none;"
+														{/if}
+													{/if}
+												>
+													{foreach $promotion.schemas as $schemaid => $schema}
+														{if $schema.valid || $schema.datefrom > $smarty.now}
+															<option title="{$schema.description|trunescape:512}"
+																value="{$schemaid}"
+																{if $variables.schemaid == $schemaid}
+																	selected
+																{/if}
+																data-valid="{if $promotion.valid && $schema.valid}1{else}0{/if}"
+																{if !$promotion.valid || !$schema.valid}
+																	class="blend" disabled
+																{/if}
+															>{strip}
+																{$schema.name|trunescape:40}
+																{if !$schema.valid && $schema.datefrom > $smarty.now}
+																	&nbsp;({trans("from")}&nbsp;{$schema.datefrom|date_format:"%Y/%m/%d"})
+																{/if}
+															{/strip}</option>
+														{/if}
+													{/foreach}
+												</optgroup>
+											{/if}
 										{/foreach}
 									</select>
 									<i id="promotion-schema-info" class="lms-ui-icon-info"></i>
